--- a/config.json
+++ b/config.json
@@ -83,5 +83,5 @@
     ]
   },
   "copy_notification": "Server IP copied to clipboard!",
-  "footer": "© 2025 Frozen"
+  "footer": "© 2025 Frozen. Crafted with passion for the ultimate Minecraft experience."
 } 
